[gd_scene load_steps=7 format=3 uid="uid://dpe146fvmhnm0"]

[ext_resource type="Script" path="res://scripts/weapon.gd" id="1_a1m0x"]
[ext_resource type="Texture2D" uid="uid://bhpujpj4trrxe" path="res://assets/triangle.png" id="1_xoe0f"]

[sub_resource type="CircleShape2D" id="CircleShape2D_q4wc8"]
radius = 64.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ns4x7"]
size = Vector2(128, 64)

[sub_resource type="StyleBoxLine" id="StyleBoxLine_xju0n"]

[sub_resource type="StyleBoxLine" id="StyleBoxLine_xfa48"]
color = Color(0.1988, 0.24992, 0.71, 1)

[node name="Weapon" type="Node2D"]
rotation = 1.5708
script = ExtResource("1_a1m0x")

[node name="Hurtbox" type="Area2D" parent="."]
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
rotation = 1.5708
shape = SubResource("CircleShape2D_q4wc8")

[node name="Sprite" type="Sprite2D" parent="."]
position = Vector2(12, -20)
scale = Vector2(0.5, 1.5)
texture = ExtResource("1_xoe0f")

[node name="DirectionBox" type="Area2D" parent="."]
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="DirectionBox"]
position = Vector2(0, -32)
shape = SubResource("RectangleShape2D_ns4x7")

[node name="RechargeBar" type="ProgressBar" parent="."]
offset_left = -16.0
offset_top = 17.0
offset_right = 16.0
offset_bottom = 18.0
theme_override_styles/background = SubResource("StyleBoxLine_xju0n")
theme_override_styles/fill = SubResource("StyleBoxLine_xfa48")
max_value = 1.5
value = 0.17
show_percentage = false

[connection signal="body_entered" from="Hurtbox" to="." method="_on_hurtbox_entered"]
[connection signal="body_exited" from="Hurtbox" to="." method="_on_hurtbox_exited"]
[connection signal="body_entered" from="DirectionBox" to="." method="_on_direction_box_entered"]
[connection signal="body_exited" from="DirectionBox" to="." method="_on_direction_box_exited"]
